--- a/views/Brotherhood.html
+++ b/views/Brotherhood.html
@@ -14,9 +14,9 @@
           </div>
           <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#/Home">Home</a></li>
+              <li><a href="#/Home">Home</a></li>
               <li><a href="#/Recruitment">Recruitment</a></li>
-              <li><a href="#/Brotherhood">Brotherhood</a></li>
+              <li class="active"><a href="#/Brotherhood">Brotherhood</a></li>
               <li><a href="#/Alumni">Alumni</a></li>
               <li><a href="#/Contact">Contact</a></li>
               <li><a href="#/Internal">Internal Information</a></li>
