--- a/views/Music.html
+++ b/views/Music.html
@@ -1,1 +1,34 @@
-MUSIC
+<form class="form-horizontal">
+  <fieldset>
+    <legend>Music Suggestion</legend>
+    <div class="form-group">
+          <label class="col-lg-1 control-label" for="focusedInput">Song Title</label>
+          <div class="col-lg-10">
+              <input class="form-control" id="songTitle" type="text" required>
+          </div>
+    </div>
+    <div class="form-group">
+        <label class="col-lg-1 control-label" for="focusedInput">Artist</label>
+        <div class="col-lg-10">
+            <input class="form-control" id="artist" type="text" required>
+         </div>
+    </div>
+    <div class="form-group">
+        <label class="col-lg-1 control-label" for="focusedInput">Albulm</label>
+         <div class="col-lg-10">
+             <input class="form-control" id="album" type="text" required>
+         </div>
+    </div>
+    <div class="form-group">
+        <label class="col-lg-1 control-label" for="focusedInput">Link to Song</label>
+        <div class="col-lg-10">
+            <input class="form-control" id="link" type="text">
+        </div>
+    </div>
+    <div class="form-group">
+      <div class="col-lg-10 col-lg-offset-10">
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </div>
+    </div>
+  </fieldset>
+</form>
