--- a/views/PartyList.html
+++ b/views/PartyList.html
@@ -1,12 +1,39 @@
 
-<div>
-<button type="submit" class="btn btn-primary">Submit</button>
-hello
-</div>
 <div ng-controller="PartyController">
+<button type="button" class="btn btn-primary" ng-click="open()">Create Event!</button>
+
+
+
+
+<script type="text/ng-template" id="myModalContent.html">
+        <div class="modal-header">
+            <h3 class="modal-title">Create an Event!</h3>
+        </div>
+        <div class="modal-body">
+          <div class="form-group">
+            <label class="control-label" for="partyTitle">Party Title</label>
+            <input type="text" class="form-control" id="partyTitle" ng-model="partyName" required>
+          </div>
+          <div class="form-group">
+            <label class="control-label" for="description">Description</label>
+            <input class="form-control input-lg" type="text" id="description" ng-model="partyDescription">
+          </div>
+          <div class="form-group">
+              <label class="control-label" for="description">Date</label>
+              <input type="text" class="form-control" datepicker-popup="{{format}}" ng-click="datePickerOpen($event)" ng-model="dt" is-open="status.opened" min-date="minDate" max-date="'2020-06-22'" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" />
+            
+        </div>
+        </div>
+        <div class="modal-footer">
+            <button class="btn btn-primary" type="button" ng-click="ok()">OK</button>
+            <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
+        </div>
+</script>
+<div>
     <div class="party" ng-repeat="party in info.results">
       <a href="#/Internal/{{$index}}">
         <span class="from">{{ party.Title }}</span><span class="subject">{{ party.Description }}</span><span class="date">{{ party.Date.iso | date}}</span>
       </a>
     </div>
+</div>
 </div>
