--- a/views/PartyList.html
+++ b/views/PartyList.html
@@ -12,16 +12,33 @@
         <div class="modal-body">
           <div class="form-group">
             <label class="control-label" for="partyTitle">Party Title</label>
-            <input type="text" class="form-control" id="partyTitle" ng-model="partyName" required>
+            <input type="text" class="form-control" id="partyTitle" ng-model="modPartyName" required>
           </div>
           <div class="form-group">
             <label class="control-label" for="description">Description</label>
-            <input class="form-control input-lg" type="text" id="description" ng-model="partyDescription">
+            <input class="form-control input-lg" type="text" id="description" ng-model="modPartyDescription">
           </div>
           <div class="form-group">
               <label class="control-label" for="description">Date</label>
               <input type="text" class="form-control" datepicker-popup="{{format}}" ng-click="datePickerOpen($event)" ng-model="dt" is-open="status.opened" min-date="minDate" max-date="'2020-06-22'" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" />
-            
+          </div>
+          <div class="form-group">
+            <label class="control-label" for="pic">Party Image</label>
+            <input type="file" name="pic" accept="image/*" fileread="modPartyPic">
+          </div>
+          <div class="form-group">
+            <label class="control-label">Setup Crew</label>
+            <div class="input-group">
+              <input type="text" class="form-control" ng-model="cleanInput">
+              <span class="input-group-btn">
+                <button class="btn btn-default" type="button" ng-click="cleanAdd(cleanInput)">Button</button>
+              </span>
+            </div>
+            <ul>
+            <div ng-repeat="member in modCleanMembers">
+              <li> {{ member }} </li>
+            </div>
+            </ul>
         </div>
         </div>
         <div class="modal-footer">
