--- a/css/custom.css
+++ b/css/custom.css
@@ -31,6 +31,7 @@ a.back:hover {
     text-decoration: none;
 }
 
+
 .section-heading {
   font-size: 36px;
   margin-top: 60px;
@@ -51,6 +52,7 @@ color: #7a7c7f;
     font-size: 18px;
     margin: 0 0 8px;
     padding: 20px 0;
+    text-overflow: ellipsis;
 }
 
 .party:hover {
@@ -63,19 +65,22 @@ color: #7a7c7f;
     color: #000;
     display: inline-block;
     margin: 0;
-    overflow: hidden;
+    overflow: ellipsis;
     position: relative;
-    text-overflow: ellipsis;
 }
 .from {
     font-size: 16px;
     font-weight: 700;
     padding-left: 2%;
     width: 20%;
+    text-align: left;
 }
 
 .subject {
-    width: 60%;
+    width: 30%;
+    overflow: ellipsis;
+    text-overflow: ellipsis;
+    padding-left: 20px;
 }
 
 .date {
@@ -84,6 +89,7 @@ color: #7a7c7f;
     text-align: right;
     text-overflow: ellipsis;
     width: 15%;
+    float: right;
 }
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
@@ -127,8 +133,6 @@ color: #7a7c7f;
 
 
 
-
-
 .intro-text {
     text-transform: uppercase;
     font-size: 1.25em;
@@ -138,4 +142,41 @@ color: #7a7c7f;
 hr {
     max-width: 400px;
     border-color: #999999;
+}
+
+
+
+.form-signin {
+  max-width: 330px;
+  padding: 15px;
+  margin: 0 auto;
+}
+.form-signin .form-signin-heading,
+.form-signin .checkbox {
+  margin-bottom: 10px;
+}
+.form-signin .checkbox {
+  font-weight: normal;
+}
+.form-signin .form-control {
+  position: relative;
+  height: auto;
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 10px;
+  font-size: 16px;
+}
+.form-signin .form-control:focus {
+  z-index: 2;
+}
+.form-signin input[type="text"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.form-signin input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
 }
