--- a/views/Brotherhood.html
+++ b/views/Brotherhood.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+      <title>Brotherhood</title>
         <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
           <div class="navbar-header">
