--- a/views/PartyList.html
+++ b/views/PartyList.html
@@ -1,10 +1,6 @@
 
 <div ng-controller="PartyController">
-<button type="button" class="btn btn-primary" ng-click="open()">Create Event!</button>
-
-
-
-
+<button type="button" ng-disabled="{{isDisabled}}" class="btn btn-primary" ng-model="createEvemt" ng-click="open()">Create Event!</button>
 <script type="text/ng-template" id="myModalContent.html">
         <div class="modal-header">
             <h3 class="modal-title">Create an Event!</h3>
@@ -13,6 +9,10 @@
           <div class="form-group">
             <label class="control-label" for="partyTitle">Party Title</label>
             <input type="text" class="form-control" id="partyTitle" ng-model="modPartyName" required>
+          </div>
+          <div class="form-group">
+            <label class="control-label" for="partyTypee">Party Type</label>
+            <input type="text" class="form-control" id="partyType" ng-model="modPartyType" required>
           </div>
           <div class="form-group">
             <label class="control-label" for="description">Description</label>
@@ -24,10 +24,10 @@
           </div>
           <div class="form-group">
             <label class="control-label" for="pic">Party Image</label>
-            <input type="file" name="pic" accept="image/*" fileread="modPartyPic">
+            <input type="file" name="pic" accept="image/*" fileread="modPartyPic" required>
           </div>
           <div class="form-group">
-            <label class="control-label">Setup Crew</label>
+            <label class="control-label">Cleanup Crew</label>
             <div class="input-group">
               <input type="text" class="form-control" ng-model="cleanInput">
               <span class="input-group-btn">
@@ -36,6 +36,34 @@
             </div>
             <ul>
             <div ng-repeat="member in modCleanMembers">
+              <li> {{ member }} </li>
+            </div>
+            </ul>
+        </div>
+        <div class="form-group">
+            <label class="control-label">Setup Crew</label>
+            <div class="input-group">
+              <input type="text" class="form-control" ng-model="setInput">
+              <span class="input-group-btn">
+                <button class="btn btn-default" type="button" ng-click="setAdd(setInput)">Button</button>
+              </span>
+            </div>
+            <ul>
+            <div ng-repeat="member in modSetMembers">
+              <li> {{ member }} </li>
+            </div>
+            </ul>
+        </div>
+        <div class="form-group">
+            <label class="control-label">Sober Monitors</label>
+            <div class="input-group">
+              <input type="text" class="form-control" ng-model="soberInput">
+              <span class="input-group-btn">
+                <button class="btn btn-default" type="button" ng-click="soberAdd(soberInput)">Button</button>
+              </span>
+            </div>
+            <ul>
+            <div ng-repeat="member in modSoberMembers">
               <li> {{ member }} </li>
             </div>
             </ul>
@@ -49,7 +77,7 @@
 <div>
     <div class="party" ng-repeat="party in info.results">
       <a href="#/Internal/{{$index}}">
-        <span class="from">{{ party.Title }}</span><span class="subject">{{ party.Description }}</span><span class="date">{{ party.Date.iso | date}}</span>
+        <span class="from">{{ party.Title }}</span><span class="subject">Type of party: {{ party.Type}}</span><span class="date">{{ party.Date.iso | date}}</span>
       </a>
     </div>
 </div>
