--- a/views/parties.html
+++ b/views/parties.html
@@ -29,22 +29,24 @@
 <div  class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
     <div class="row">
         <div class="box">
+            <center>
             <hr>
             <h2 class="intro-text text-center">
                 <strong>{{ detail.Title }} </strong>
             </h2>
             <hr>
-            <img src="{{ detail.Cover_img.url }}">
+            <img src="{{ detail.Cover_img.url }}" align="middle">
+            
             <h2 class="section-heading">When?
                 <br>
-                <small>{{detail.Date.iso | date }}</small>
+                <small>{{detail.Date}}</small>
             </h2>
             <h2 class="section-heading">Description</h2>
                 <p>{{detail.Description }}</p>
             <h2 class="section-heading">Sober Monitors</h2>
             <ul>
                 <div ng-repeat="sober_monitor in detail.Sober_Monitors">
-                    <li>{{ sober_monitor.name}} and {{ sober_monitor.position }}</li>
+                    <li>{{ sober_monitor}}</li>
                 </div>
             </ul>
             <h2 class="section-heading">Setup Crew</h2>
@@ -60,6 +62,11 @@
                 </div>
             </ul>
             <br>
+            <br>
+            <h2 class="section-heading text-center">Comments</h2>
+            <hr>
+            </center>
+            
         </div>
     </div>
 </div>
